--- a/homework01/develop/index.html
+++ b/homework01/develop/index.html
@@ -11,13 +11,13 @@
 
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <div>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
                 <li><a href="#online-reputation-management">Online Reputation Management</a></li>
                 <li><a href="#social-media-marketing">Social Media Marketing</a></li>
             </ul>
-        </nav>
+        </div>
     </div>
 
     <div class="hero"></div>
@@ -40,7 +40,7 @@
                 Online Reputation Management gives you the control over what potential customers 
                 see when they search for your business.</p>
         </div>
-
+        
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
