--- a/homework01/develop/index.html
+++ b/homework01/develop/index.html
@@ -21,8 +21,8 @@
     <figure class="hero"></figure>
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization"
-                class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="search engine optimization (seo) on work desk" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>The dominance of mobile internet use means that users are searching
                 for the right business as they travel, shop, or sit on their couch at home.
@@ -30,7 +30,7 @@
                 find the right customers for your business.</p>
         </section>
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management"
+            <img src="./assets/images/online-reputation-management.jpg" alt="reputation displayed on laptop with graphs"
                 class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>The web is full of opinions, and some of these can be negative. Social media allows
@@ -39,7 +39,8 @@
                 see when they search for your business.</p>
         </section>
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media plugins on table"
+                class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media
                 marketing helps you determine which platforms are suited to your brand, using analytics
@@ -49,19 +50,20 @@
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead-generation" />
+            <img src="./assets/images/lead-generation.png"
+                alt="lead generation icon shows leads funneling in resuluting in profit" />
             <p>Inbound strategies for lead generation require less work for your business,
                 bringing customers directly to your website.</p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand-awareness" />
+            <img src="./assets/images/brand-awareness.png" alt="brand awareness icon showing a lightbulb as a head" />
             <p>Users find your business through paid and organic searches,
                 increasing the search ranking and visibility for your business.</p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost-management" />
+            <img src="./assets/images/cost-management.png" alt="cost management icon showing a gear and money" />
             <p>As the search ranking for your business increases, your advertising costs decrease,
                 and you no longer need to advertise your page.</p>
         </aside>
